--- a/index_diary.html
+++ b/index_diary.html
@@ -250,30 +250,20 @@
           const apiKey = getGeminiKey();
           if(!apiKey) throw new Error('GEMINI_API_KEY が見つかりません（js/config.js を確認）');
           const model = encodeURIComponent(getGeminiModel());
-          const url = `https://generativelanguage.googleapis.com/v1beta/models/${model}:generateContent?key=${encodeURIComponent(apiKey)}`;
-          const body = {
-            contents: [{ role: "user", parts: [{ text: String(prompt||'') }]}],
-            generationConfig: { maxOutputTokens: maxTokens, temperature: 0.9, topP: 0.95, topK: 40 }
-          };
-          let lastErr=null;
-          for(let i=0;i<retries;i++){
-            try{
-              const res = await fetch(url, { method:"POST", headers:{ "Content-Type":"application/json" }, body: JSON.stringify(body) });
-              const data = await res.json().catch(()=> ({}));
-              if(!res.ok){
-                const msg = (data && data.error && data.error.message) ? data.error.message : `HTTP ${res.status}`;
-                throw new Error(msg);
-              }
-              const text = (data?.candidates?.[0]?.content?.parts||[]).map(p=>p.text||'').join('').trim();
-              if(!text) throw new Error('Gemini応答が空でした');
-              return text;
-            }catch(e){
-              lastErr=e;
-              await new Promise(r=> setTimeout(r, 250*(i+1)));
-            }
-          }
-          throw lastErr || new Error('Geminiに到達できませんでした');
-        }
+          const url = APP_CONFIG.API_BASE_URL; // ← GAS WebアプリURLが入っている
+const body = {
+  model: APP_CONFIG.GEMINI_MODEL || "deepseek-chat",
+  contents,                // 既存の contents をそのまま使う
+  systemInstruction,       // 既存の systemInstruction をそのまま使う（あれば）
+  temperature: APP_CONFIG.GEMINI && APP_CONFIG.GEMINI.TEMPERATURE || 1.0,
+  maxTokens:  APP_CONFIG.GEMINI && APP_CONFIG.GEMINI.MAX_TOKENS   || 400
+};
+const resp = await fetch(url, {
+  method: "POST",
+  headers: { "Content-Type": "application/json" }, // ← 認証系ヘッダは付けない
+  body: JSON.stringify(body)
+});
+
 
         function promptBuilder(ctx){
           const {name, ageYears, personality, territory, weatherKey, note, ownerGender} = ctx;
