--- a/index_diary.html
+++ b/index_diary.html
@@ -237,20 +237,17 @@
           return '';
         }
 
-        /* ====== Gemini REST 直呼び（必須、リトライ付） ====== */
-        function getGeminiKey(){
-          const cfg = window.APP_CONFIG || {};
-          return cfg.GEMINI_API_KEY || cfg.GOOGLE_API_KEY || cfg.API_KEY || '';
-        }
+        /* ====== DeepSeek を GAS 経由で呼ぶ（リトライ付） ====== */
         function getGeminiModel(){
           const cfg = window.APP_CONFIG || {};
-          return cfg.GEMINI_MODEL || cfg.MODEL || 'gemini-1.5-flash';
+          // モデル名は config で上書き可能。未設定時は deepseek-chat を使う
+          return cfg.GEMINI_MODEL || cfg.MODEL || 'deepseek-chat';
         }
-        // ★ 修正：GAS（APP_CONFIG.API_BASE_URL）経由で呼び出す実装に変更
+        // GAS（APP_CONFIG.API_BASE_URL）へ text/plain で投げる（CORS回避）
         async function callGeminiStrict(prompt, {maxTokens=240, retries=4}={}){
           const apiBase = (window.APP_CONFIG && window.APP_CONFIG.API_BASE_URL) || '';
           if(!apiBase) throw new Error('AI API の接続先が未設定です（config.js の API_BASE_URL を確認）');
-          const model = getGeminiModel(); // deepseek-chat を想定（configで上書き）
+          const model = getGeminiModel();
 
           const body = {
             model: model,
@@ -264,7 +261,7 @@
             try{
               const res = await fetch(apiBase, {
                 method:"POST",
-                headers:{ "Content-Type":"application/json" }, // 認証ヘッダは付けない（GAS側で鍵を保持）
+                headers:{ "Content-Type":"text/plain" }, // ← ここを text/plain にして事前確認を回避
                 body: JSON.stringify(body)
               });
               const data = await res.json().catch(()=> ({}));
@@ -272,7 +269,6 @@
                 const msg = (data && data.error && data.error.message) ? data.error.message : `HTTP ${res.status}`;
                 throw new Error(msg);
               }
-              // GAS側で Gemini 風 {candidates[{content{parts[{text}]}}]} に正規化して返している
               const text = (data?.candidates?.[0]?.content?.parts?.[0]?.text || '').trim();
               if(!text) throw new Error('AI応答が空でした');
               return text;
@@ -385,7 +381,9 @@ document.getElementById('cat-gender').textContent =
           }catch(e){
             console.warn('Snaps init failed:', e && e.message ? e.message : e);
             snaps = { hasSnaps: ()=>false, onChange: ()=>{} };
-            showError('写真機能の読み込みに失敗しました。古い写真が多い場合は容量がいっぱいの可能性があります。Ctrl+F5 で再読み込み、直らなければ古い写真を少し整理してください。');
+            const box=document.getElementById('tw-error');
+            box.textContent='写真機能の読み込みに失敗しました。古い写真が多い場合は容量がいっぱいの可能性があります。Ctrl+F5 で再読み込み、直らなければ古い写真を少し整理してください。';
+            box.style.display='block';
           }
 
           const btnFB=document.getElementById('btn-fb');
@@ -471,7 +469,7 @@ document.getElementById('cat-gender').textContent =
               saveAndShow(ymd, finalText);
 
             }catch(e){
-              showErr('AI生成に失敗しました。Geminiの設定やネットワークをご確認ください。' + (e && e.message ? '（詳細: ' + e.message + '）' : ''));
+              showErr('AI生成に失敗しました。設定やネットワークをご確認ください。' + (e && e.message ? '（詳細: ' + e.message + '）' : ''));
             }
           }
 
