--- a/index_diary.html
+++ b/index_diary.html
@@ -213,7 +213,7 @@
           if(wday===0) hints.push('週末のしずけさ');
           if(hour>=16 && hour<=18){
             if(month>=6 && month<=8) hints.push('明るい夕暮れ');
-            if(month===12 || month<=2) hints.push('夕暮れが早い');
+            if(month===12 ||月<=2) hints.push('夕暮れが早い');
           }
           if(hour>=5 && hour<=7 && month>=3 && month<=5) hints.push('朝焼けがきれい');
           if(hour>=11&&hour<=14){
@@ -237,11 +237,34 @@
           return '';
         }
 
-        /* ====== DeepSeek を GAS 経由で呼ぶ（POST→失敗時GET） ====== */
+        /* ====== DeepSeek を GAS 経由で呼ぶ（POST→GET→JSONP フェイルオーバー） ====== */
         function getGeminiModel(){
           const cfg = window.APP_CONFIG || {};
           return cfg.GEMINI_MODEL || cfg.MODEL || 'deepseek-chat';
         }
+
+        // JSONPユーティリティ
+        function jsonp(url, params={}, timeoutMs=10000){
+          return new Promise((resolve, reject)=>{
+            const cbName = '__NT_JSONP_cb_' + Date.now() + '_' + Math.floor(Math.random()*1e6);
+            const q = new URLSearchParams({ ...params, callback: cbName });
+            const s = document.createElement('script');
+            const timer = setTimeout(()=>{
+              cleanup(); reject(new Error('JSONP timeout'));
+            }, timeoutMs);
+
+            function cleanup(){
+              clearTimeout(timer);
+              try{ delete window[cbName]; }catch(_){ window[cbName]=undefined; }
+              if(s.parentNode) s.parentNode.removeChild(s);
+            }
+            window[cbName] = function(data){ cleanup(); resolve(data); };
+            s.src = url + '?' + q.toString();
+            s.onerror = function(){ cleanup(); reject(new Error('JSONP load error')); };
+            document.head.appendChild(s);
+          });
+        }
+
         async function callGeminiStrict(prompt, {maxTokens=240, retries=4}={}){
           const apiBase = (window.APP_CONFIG && window.APP_CONFIG.API_BASE_URL) || '';
           if(!apiBase) throw new Error('AI API の接続先が未設定です（config.js の API_BASE_URL を確認）');
@@ -271,9 +294,9 @@
               const text = (data?.candidates?.[0]?.content?.parts?.[0]?.text || '').trim();
               if(!text) throw new Error('AI応答が空でした');
               return text;
-            }catch(e){
-              lastErr=e;
-              // 2) 失敗したら 1回だけ GET で取り直す
+            }catch(e1){
+              lastErr=e1;
+              // 2) GET（JSON）
               try{
                 const q = new URLSearchParams({
                   action: 'ai',
@@ -287,8 +310,27 @@
                 if(res2.ok && !(data2 && data2.error)){
                   const text2 = (data2?.candidates?.[0]?.content?.parts?.[0]?.text || '').trim();
                   if(text2) return text2;
+                  throw new Error('GET empty');
                 }
-              }catch(e2){ lastErr=e2; }
+                throw new Error((data2 && data2.error && data2.error.message) || 'GET failed');
+              }catch(e2){
+                lastErr=e2;
+                // 3) JSONP（CORS完全回避）
+                try{
+                  const data3 = await jsonp(apiBase, {
+                    action: 'ai',
+                    model: model,
+                    temperature: String((window.APP_CONFIG && window.APP_CONFIG.GEMINI && window.APP_CONFIG.GEMINI.TEMPERATURE) || 0.9),
+                    maxTokens: String(maxTokens),
+                    prompt: String(prompt||'')
+                  }, 12000);
+                  const text3 = (data3?.candidates?.[0]?.content?.parts?.[0]?.text || '').trim();
+                  if(text3) return text3;
+                  throw new Error('JSONP empty');
+                }catch(e3){
+                  lastErr=e3;
+                }
+              }
               await new Promise(r=> setTimeout(r, 250*(i+1)));
             }
           }
